--- a/.config/polybar/modules.ini
+++ b/.config/polybar/modules.ini
@@ -314,7 +314,7 @@ label-font = 12
 format-font = 6
 format-prefix = " "
 interval = 7200
-click-left = kitty --hold paru
+click-left = alacritty -e "/usr/bin/paru"
 
 [module/seperator]
 type = custom/text
