--- a/.config/neofetch/config.conf
+++ b/.config/neofetch/config.conf
@@ -70,7 +70,7 @@ cpu_display="off"
 memory_display="off"
 battery_display="off"
 disk_display="off"
-image_backend="kitty"
+image_backend="alacritty"
 image_source="$HOME/.config/neofetch/arch.png"
 ascii_distro="auto"
 ascii_colors=(distro)
